--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@headless-tree/core",
   "version": "1.1.0",
-  "type": "commonjs",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "types": "lib/esm/index.d.ts",
+  "exports": {
+    "types": "./lib/esm/index.d.ts",
+    "import": "./lib/esm/index.js",
+    "default": "./lib/cjs/index.js"
+  },
   "sideEffects": false,
   "scripts": {
     "build:cjs": "tsc -m commonjs --outDir lib/cjs",
