--- a/packages/sb-react/package.json
+++ b/packages/sb-react/package.json
@@ -16,25 +16,20 @@
     "@babel/preset-typescript": "^7.21.5",
     "@headless-tree/core": "workspace:*",
     "@headless-tree/react": "workspace:*",
-    "@storybook/addon-actions": "^8.6.0-alpha.0",
-    "@storybook/addon-essentials": "^8.6.0-alpha.0",
-    "@storybook/addon-interactions": "^8.6.0-alpha.0",
-    "@storybook/addon-links": "^8.6.0-alpha.0",
-    "@storybook/blocks": "^8.6.0-alpha.0",
-    "@storybook/builder-vite": "^8.6.0-alpha.0",
-    "@storybook/react": "^8.6.0-alpha.0",
-    "@storybook/react-webpack5": "^8.6.0-alpha.0",
+    "@storybook/addon-actions": "9.0.8",
+    "@storybook/addon-essentials": "9.0.0-alpha.12",
+    "@storybook/addon-interactions": "9.0.0-alpha.10",
+    "@storybook/addon-links": "9.0.18",
+    "@storybook/blocks": "9.0.0-alpha.17",
+    "@storybook/react": "9.0.18",
+    "@storybook/react-vite": "9.0.18",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "classnames": "^2.3.2",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^8.6.0-alpha.0",
+    "storybook": "9.0.18",
     "typescript": "^5.7.2",
-    "vite": "^4.3.3"
-  },
-  "devDependencies": {
-    "@storybook/addon-webpack5-compiler-swc": "2.0.0",
-    "@storybook/test": "8.6.0-alpha.0"
+    "vite": "5.0.0"
   }
 }
