--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,11 +15,21 @@
         "default": "./dist/index.d.ts"
       }
     },
+    "./react17": {
+      "import": {
+        "types": "./dist/react17/index.d.mts",
+        "default": "./dist/react17/index.mjs"
+      },
+      "require": {
+        "types": "./dist/react17/index.js",
+        "default": "./dist/react17/index.d.ts"
+      }
+    },
     "./package.json": "./package.json"
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsup ./src/index.ts --format esm,cjs --dts",
+    "build": "tsup ./src/index.ts ./src/react17/index.tsx --format esm,cjs --dts",
     "start": "tsup ./src/index.ts --format esm,cjs --dts --watch"
   },
   "repository": {
