--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "examples/*"
+    "examples/basic",
+    "examples/comprehensive",
+    "examples/nextjs",
+    "examples/react-compiler"
   ],
   "scripts": {
     "lint": "eslint . --fix",
