--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,18 @@
 {
   "name": "@headless-tree/core",
+  "description": "The definitive tree component for the Web",
+  "keywords": [
+    "tree",
+    "component",
+    "web",
+    "headless",
+    "ui",
+    "react",
+    "nested",
+    "async",
+    "checkbox",
+    "hook"
+  ],
   "version": "1.4.0",
   "main": "dist/index.d.ts",
   "module": "dist/index.mjs",
