--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,11 @@ jobs:
       - run: yarn build:core
       - run: yarn build:sb
       - run: yarn llmtxt
+      - run: ls ./packages/docs/build
+      - run: ls ./packages/docs/static
       - run: yarn build:web
+      - run: ls ./packages/docs/build
+      - run: ls ./packages/docs/static
       - run: |
           mkdir -p ./packages/docs/build/storybook
           cp -r ./packages/sb-react/storybook-static ./packages/docs/build/storybook/react
